# sclipple

./: .gitattributes  .gitignore  LICENSE  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac  configure~
.github/workflows/: ci.yml
src/: Makefile  Makefile.am  Makefile.in  datetime.c  datetime.h  edit_list.c  edit_list.h  filename.c  filename.h  gen_file.c  gen_file.h  get_rc.c  get_rc.h  get_setting.c  get_setting.h  git_run.c  git_run.h  globals.h  help.c  help.h  main.c  memo_add.c  memo_add.h  memo_edit.c  memo_edit.h  memo_ls.c  memo_ls.h  memo_mv.c  memo_mv.h  memo_rm.c  memo_rm.h  memo_search.c  memo_search.h  memo_show.c  memo_show.h  names.c  names.h  read_list.c  read_list.h  strutils.c  (+1 more)
tests/: cli.sh
