bin_PROGRAMS = sclipple

sclipple_SOURCES = \
    help.c \
    strutils.c \
    get_rc.c \
    get_setting.c \
    datetime.c \
    names.c \
    edit_list.c \
    git_run.c \
    memo_add.c \
    memo_edit.c \
    memo_rm.c \
    memo_mv.c \
    memo_ls.c \
    memo_search.c \
    memo_show.c \
    main.c

AM_CFLAGS = \
    -D_POSIX_C_SOURCE=200809L \
    -O2 \
    -Wall \
    -Wextra
