bin_PROGRAMS = sclipple

sclipple_SOURCES = \
    globals.h \
    help.c help.h \
    strutils.c strutils.h \
    get_rc.c get_rc.h \
    get_setting.c get_setting.h \
    datetime.c datetime.h \
    names.c names.h \
    edit_list.c edit_list.h \
    git_run.c git_run.h \
    memo_add.c memo_add.h \
    memo_edit.c memo_edit.h \
    memo_rm.c memo_rm.h \
    memo_mv.c memo_mv.h \
    memo_ls.c memo_ls.h \
    memo_search.c memo_search.h \
    memo_show.c memo_show.h \
    main.c

AM_CFLAGS = \
    -D_POSIX_C_SOURCE=200809L \
    -O2 \
    -Wall \
    -Wextra
